Sync dotfiles: kitty, nvim (LazyVim), hypr, waybar

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,4 +43,4 @@ map ctrl+shift+f      toggle_fullscreen
 # BEGIN_KITTY_THEME
 # Tokyo Night
 include current-theme.conf
-# END_KITTY_THEME
+# END_KITTY_THEMEstartup_session ~/.config/kitty/session.conf
